--- a/ins-service/ins-system-service/ins-leaf/ins-leaf-service/pom.xml
+++ b/ins-service/ins-system-service/ins-leaf/ins-leaf-service/pom.xml
@@ -45,6 +45,14 @@
         </dependency>
 
         <!--zk-->
+        <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.5.4-beta</version>
+            <type>pom</type>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-recipes</artifactId>
