--- a/ins-service/ins-system-service/ins-leaf/ins-leaf-service/src/main/resources/application.properties
+++ b/ins-service/ins-system-service/ins-leaf/ins-leaf-service/src/main/resources/application.properties
@@ -15,7 +15,10 @@ spring.freemarker.template-loader-path=classpath:/templates/
 
 spring.application.name=ins-leaf
 
-register.center=http://127.0.0.1:9997/eureka
+
+register.center=127.0.0.1:8848
+
+spring.cloud.nacos.discovery.server-addr: ${register.center}
 
 feign.compression.request.enabled=true
 feign.compression.request.mime-types[0]=text/xml
@@ -26,14 +29,6 @@ feign.compression.response.enabled=true
 feign.hystrix.enabled=true
 feign.httpclient.enabled=false
 feign.okhttp.enabled=true
-feign.okhttp.log.level=HEADERS
+feign.okhttp.log.level=NONE
 
-
-eureka.client.healthcheck.enabled=true
-eureka.client.registry-fetch-interval-seconds=10
-eureka.client.serviceUrl.defaultZone=${register.center}
-eureka.instance.lease-renewal-interval-in-seconds=5
-eureka.instance.lease-expiration-duration-in-seconds=10
-eureka.instance.preferIpAddress=true
-eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
 
