后台管理服务

--- a/ins-service/ins-admin-service/ins-admin/admin-service/pom.xml
+++ b/ins-service/ins-admin-service/ins-admin/admin-service/pom.xml
@@ -6,17 +6,21 @@
 
     <parent>
         <groupId>com.haili.ins.service.admin</groupId>
-        <artifactId>ins-admin-service</artifactId>
+        <artifactId>ins-admin</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.haili.ins.service.admin</groupId>
-    <artifactId>ins-admin</artifactId>
+    <artifactId>admin-service</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>admin-dao</module>
-        <module>admin-service</module>
-    </modules>
+    <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.haili.ins.service.admin</groupId>
+            <artifactId>admin-dao</artifactId>
+        </dependency>
+
+
+    </dependencies>
     
 </project>
