后台管理模块

--- a/ins-service/ins-admin-service/ins-admin/admin-service/pom.xml
+++ b/ins-service/ins-admin-service/ins-admin/admin-service/pom.xml
@@ -18,6 +18,7 @@
         <dependency>
             <groupId>com.haili.ins.service.admin</groupId>
             <artifactId>admin-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
 
