--- a/ins-service/ins-admin-service/ins-admin/admin-service/src/main/resources/application.yml
+++ b/ins-service/ins-admin-service/ins-admin/admin-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name:  member-server
+    name:  admin-server
   datasource:
     url: jdbc:mysql://47.100.3.157:3306/admin?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
     userName: root
