--- a/ins-gateway/api-gateway/src/main/resources/application.yml
+++ b/ins-gateway/api-gateway/src/main/resources/application.yml
@@ -38,7 +38,7 @@ zuul:
   routes:
     auth:
       path: /auth/**
-      service-id: oauth2-jwt-server
+      service-id: auth-member-server
       sensitive-headers:
       custom-sensitive-headers: true
     member:
