--- a/ins-service/ins-base-service/ins-base/pom.xml
+++ b/ins-service/ins-base-service/ins-base/pom.xml
@@ -5,17 +5,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.haili.ins.service</groupId>
-        <artifactId>ins-service</artifactId>
+        <groupId>com.haili.ins.service.base</groupId>
+        <artifactId>ins-base-service</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.haili.ins.service.base</groupId>
-    <artifactId>ins-base-service</artifactId>
+    <artifactId>ins-base</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>ins-base</module>
+        <module>base-dao</module>
+        <module>base-service</module>
     </modules>
-    
+
 </project>
