--- a/ins-service/ins-account-service/ins-txncore/pom.xml
+++ b/ins-service/ins-account-service/ins-txncore/pom.xml
@@ -31,6 +31,12 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.haili.ins.feign</groupId>
+            <artifactId>txncore-feign</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
