--- a/ins-feign/auth-member-feign/pom.xml
+++ b/ins-feign/auth-member-feign/pom.xml
@@ -2,32 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>ins-member</artifactId>
-        <groupId>com.haili.ins.service.member</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.haili.ins.service.member</groupId>
-    <artifactId>member-service</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>com.haili.ins.feign</groupId>
+        <artifactId>ins-feign</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
+    <groupId>com.haili.ins.feign</groupId>
+    <artifactId>auth-member-feign</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>com.haili.ins.service.member</groupId>
-            <artifactId>member-dao</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>com.haili.ins.feign</groupId>
-            <artifactId>member-feign</artifactId>
+            <artifactId>common-feign</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
     </dependencies>
-
-
-
-
+    
 </project>
