--- a/ins-service/ins-account-service/ins-account/pom.xml
+++ b/ins-service/ins-account-service/ins-account/pom.xml
@@ -32,7 +32,7 @@
         </dependency>
         <dependency>
             <groupId>com.haili.ins.feign</groupId>
-            <artifactId>invoke-feign</artifactId>
+            <artifactId>account-feign</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
