--- a/ins-service/ins-auth-service/auth-member-service/pom.xml
+++ b/ins-service/ins-auth-service/auth-member-service/pom.xml
@@ -23,7 +23,7 @@
         </dependency>
         <dependency>
             <groupId>com.haili.ins.feign</groupId>
-            <artifactId>invoke-feign</artifactId>
+            <artifactId>auth-member-feign</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
