--- a/ins-service/ins-account-service/ins-account/src/main/resources/bootstrap.yml
+++ b/ins-service/ins-account-service/ins-account/src/main/resources/bootstrap.yml
@@ -87,4 +87,4 @@ hystrix.command.default.execution:
   timeout.enabled: true
   isolation:
     thread:
-      timeout-in-milliseconds: 60000
+      timeoutInMilliseconds: 60000
