--- a/ins-service/ins-admin-service/ins-admin/admin-service/src/main/resources/bootstrap.yml
+++ b/ins-service/ins-admin-service/ins-admin/admin-service/src/main/resources/bootstrap.yml
@@ -110,22 +110,7 @@ hystrix.command.default.execution:
   timeout.enabled: true
   isolation:
     thread:
-      timeout-in-milliseconds: 60000
-
-#eureka:
-#  client:
-#    # 开启健康检查
-#    healthcheck.enabled: true
-#    # client 间隔多久去拉取服务注册信息(默认 30 秒)
-#    registry-fetch-interval-seconds: 10
-#    serviceUrl.defaultZone: ${register.center}
-#  instance:
-#    # client 发送心跳给 server 端的频率(默认 30 秒)
-#    lease-renewal-interval-in-seconds: 5
-#    # server 收到心跳等待下一次心跳的超时时间, 要比上面的大(默认 90 秒)
-#    lease-expiration-duration-in-seconds: 10
-#    preferIpAddress: true
-#    instance-id: ${spring.cloud.client.ip-address}:${server.port}
+      timeoutInMilliseconds: 60000
 
 #apollo:
 #  bootstrap:
