--- a/ins-service/ins-member-service/ins-member/member-facade/src/main/resources/bootstrap.yml
+++ b/ins-service/ins-member-service/ins-member/member-facade/src/main/resources/bootstrap.yml
@@ -110,7 +110,7 @@ hystrix.command.default.execution:
   timeout.enabled: true
   isolation:
     thread:
-      timeout-in-milliseconds: 60000
+      timeoutInMilliseconds: 60000
 
 #eureka:
 #  client:
