--- a/ins-service/ins-order-service/ins-order/order-service/src/main/resources/bootstrap.yml
+++ b/ins-service/ins-order-service/ins-order/order-service/src/main/resources/bootstrap.yml
@@ -78,10 +78,14 @@ feign:
     enabled: false
   okhttp:
     enabled: true
-    log.level: "HEADERS"
+    log.level: "NONE"
 
-hystrix.command.default.execution:
-  timeout.enabled: true
-  isolation:
-    thread:
-      timeout-in-milliseconds: 60000
+
+hystrix:
+  command:
+    default:
+      execution:
+        timeout.enabled: true
+        isolation:
+          thread:
+            timeoutInMilliseconds: 60000
