--- a/ins-commons/ins-common-webmvc/pom.xml
+++ b/ins-commons/ins-common-webmvc/pom.xml
@@ -26,6 +26,10 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <!-- 移除tomcat容器-->
