--- a/ins-service/ins-member-service/ins-member/member-facade/pom.xml
+++ b/ins-service/ins-member-service/ins-member/member-facade/pom.xml
@@ -23,7 +23,11 @@
             <artifactId>member-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.haili.ins.commons</groupId>
+            <artifactId>ins-common-swagger</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.haili.ins.cores</groupId>
