--- a/ins-service/ins-order-service/ins-order/order-service/pom.xml
+++ b/ins-service/ins-order-service/ins-order/order-service/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>com.haili.ins.feign</groupId>
-            <artifactId>order-feign</artifactId>
+            <artifactId>member-feign</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
