--- a/ins-service/ins-order-service/ins-order/order-service/src/main/resources/bootstrap.yml
+++ b/ins-service/ins-order-service/ins-order/order-service/src/main/resources/bootstrap.yml
@@ -48,6 +48,10 @@ spring:
     nacos:
       discovery:
         server-addr: ${register.center}
+#    sentinel:
+#      transport:
+#        port: 8722
+#        dashboard: localhost:9999
 
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
@@ -70,9 +74,8 @@ feign:
       mime-types: ["text/xml","application/xml","application/json"]
       min-request-size: 2048
     response.enabled: true
-  hystrix:
-    # 在feign中开启hystrix功能，默认情况下feign不开启hystrix功能
-    enabled: true
+#  sentinel:
+#    enabled: true
   ## 配置httpclient线程池
   httpclient:
     enabled: false
@@ -81,11 +84,11 @@ feign:
     log.level: "NONE"
 
 
-hystrix:
-  command:
-    default:
-      execution:
-        timeout.enabled: true
-        isolation:
-          thread:
-            timeoutInMilliseconds: 60000
+#hystrix:
+#  command:
+#    default:
+#      execution:
+#        timeout.enabled: true
+#        isolation:
+#          thread:
+#            timeoutInMilliseconds: 60000
