--- a/ins-data/ins-file/ins-aliyun-oss/pom.xml
+++ b/ins-data/ins-file/ins-aliyun-oss/pom.xml
@@ -15,9 +15,8 @@
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
-            <groupId>com.aliyun.oss</groupId>
-            <artifactId>aliyun-sdk-oss</artifactId>
-            <version>3.4.2</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
         </dependency>
     </dependencies>
     
