--- a/ins-commons/ins-common-spring-cloud/pom.xml
+++ b/ins-commons/ins-common-spring-cloud/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>com.haili.ins.commons</groupId>
-            <artifactId>ins-common</artifactId>
+            <artifactId>ins-common-web</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
