--- a/ins-message/ins-message-service/ins-rocketmq/pom.xml
+++ b/ins-message/ins-message-service/ins-rocketmq/pom.xml
@@ -21,9 +21,8 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-client</artifactId>
-            <version>4.5.0</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rocketmq</artifactId>
         </dependency>
     </dependencies>
 </project>
