--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>ins-distribution-transaction</module>
 		<module>ins-doc</module>
         <module>ins-feign</module>
+		<module>ins-flow</module>
 		<module>ins-invocation-chain</module>
         <module>ins-gateway</module>
         <module>ins-moniter</module>
