--- a/ins-third-party/ins-weixin/pom.xml
+++ b/ins-third-party/ins-weixin/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.haili.ins.service.block</groupId>
-        <artifactId>ins-block-service</artifactId>
+        <groupId>com.haili.ins.third.party</groupId>
+        <artifactId>ins-third-party</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.haili.ins.service.block</groupId>
-    <artifactId>ins-block-eth</artifactId>
+    <groupId>com.haili.ins.third.party</groupId>
+    <artifactId>ins-weixin</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     
