--- a/ins-data/ins-file/ins-aliyun-oss/pom.xml
+++ b/ins-data/ins-file/ins-aliyun-oss/pom.xml
@@ -15,7 +15,7 @@
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
+            <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
         </dependency>
     </dependencies>
