--- a/ins-message/ins-message-service/ins-rocketmq/pom.xml
+++ b/ins-message/ins-message-service/ins-rocketmq/pom.xml
@@ -21,7 +21,7 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
+            <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-stream-rocketmq</artifactId>
         </dependency>
     </dependencies>
