--- a/pom.xml
+++ b/pom.xml
@@ -39,35 +39,35 @@
         <maven-jar-plugin>3.1.2</maven-jar-plugin>
         <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
         <spring-cloud-alibaba.version>2.1.0.RELEASE</spring-cloud-alibaba.version>
-        <joda.version>2.10.2</joda.version>
-        <commons-lang3.version>3.8.1</commons-lang3.version>
-        <commons-codec.version>1.12</commons-codec.version>
+        <joda.version>2.10.3</joda.version>
+        <commons-lang3.version>3.9</commons-lang3.version>
+        <commons-codec.version>1.13</commons-codec.version>
         <commons-fileupload.version>1.4</commons-fileupload.version>
-        <guava.version>27.1-jre</guava.version>
+        <guava.version>28.0-jre</guava.version>
         <lombok.version>1.18.8</lombok.version>
-        <jackson.version>2.9.8</jackson.version>
-        <fastjson.version>1.2.56</fastjson.version>
+        <jackson.version>2.10.0.pr1</jackson.version>
+        <fastjson.version>1.2.59</fastjson.version>
         <gson.version>2.8.5</gson.version>
         <hikaricp.version>3.3.1</hikaricp.version>
-        <mysql.version>8.0.16</mysql.version>
-        <mybatis.version>3.5.1</mybatis.version>
-        <mybatis-spring.version>2.0.1</mybatis-spring.version>
+        <mysql.version>8.0.17</mysql.version>
+        <mybatis.version>3.5.2</mybatis.version>
+        <mybatis-spring.version>2.1.0</mybatis-spring.version>
         <tk.mybatis.version>2.1.5</tk.mybatis.version>
-        <pagehelper-spring.version>1.2.11</pagehelper-spring.version>
-        <snakeyaml.version>1.24</snakeyaml.version>
+        <pagehelper-spring.version>1.2.12</pagehelper-spring.version>
+        <snakeyaml.version>1.25</snakeyaml.version>
         <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
-        <httpclient.version>4.5.8</httpclient.version>
-        <httpmime.version>4.5.8</httpmime.version>
+        <httpclient.version>4.5.9</httpclient.version>
+        <httpmime.version>4.5.9</httpmime.version>
         <httpcore.version>4.4.11</httpcore.version>
         <httpasyncclient.version>4.1.4</httpasyncclient.version>
         <httpcore-nio.version>4.4.11</httpcore-nio.version>
-        <okhttp3.version>3.14.2</okhttp3.version>
-        <hibernate-validator.version>6.1.0.Alpha4</hibernate-validator.version>
+        <okhttp3.version>4.1.0</okhttp3.version>
+        <hibernate-validator.version>6.1.0.Alpha6</hibernate-validator.version>
         <javax-validation.version>2.0.1.Final</javax-validation.version>
         <!--        <glassfish-el.version>3.0.1-b11</glassfish-el.version>-->
         <swagger2.version>2.9.2</swagger2.version>
-        <zxing.version>3.3.3</zxing.version>
-        <auth0.jwt.version>3.8.0</auth0.jwt.version>
+        <zxing.version>3.4.0</zxing.version>
+        <auth0.jwt.version>3.8.2</auth0.jwt.version>
         <poi.version>4.1.0</poi.version>
     </properties>
 
