--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
         <!--        <glassfish-el.version>3.0.1-b11</glassfish-el.version>-->
         <swagger2.version>2.9.2</swagger2.version>
         <zxing.version>3.4.0</zxing.version>
-        <auth0.jwt.version>3.8.2</auth0.jwt.version>
+        <jjwt.version>0.9.1</jjwt.version>
         <poi.version>4.1.0</poi.version>
     </properties>
 
