--- a/ins-block/ins-block-fabric/ins-original-sdk/pom.xml
+++ b/ins-block/ins-block-fabric/ins-original-sdk/pom.xml
@@ -5,14 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.haili.ins.service.scheduler</groupId>
-        <artifactId>ins-scheduler-service</artifactId>
+        <groupId>com.haili.ins.block</groupId>
+        <artifactId>ins-block-fabric</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.haili.ins.service.batch</groupId>
-    <artifactId>ins-batch</artifactId>
+    <groupId>com.haili.ins.block</groupId>
+    <artifactId>ins-original-sdk</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>jar</packaging>
 
 </project>
