--- a/ins-block/ins-block-fabric/ins-tencent-sdk/pom.xml
+++ b/ins-block/ins-block-fabric/ins-tencent-sdk/pom.xml
@@ -5,18 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.haili.ins</groupId>
-        <artifactId>haili-ins</artifactId>
+        <groupId>com.haili.ins.block</groupId>
+        <artifactId>ins-block-fabric</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
-    <groupId>com.haili.ins.invocation.chain</groupId>
-    <artifactId>ins-invocation-chain</artifactId>
+    <packaging>jar</packaging>
+    <groupId>com.haili.ins.block</groupId>
+    <artifactId>ins-tencent-sdk</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>ins-invocation-chain-cat</module>
-        <module>ins-invocation-chain-skywalking</module>
 
-    </modules>
+    
 </project>
