--- a/ins-message/ins-notification/ins-sms/ins-aliyun-sms/pom.xml
+++ b/ins-message/ins-notification/ins-sms/ins-aliyun-sms/pom.xml
@@ -16,9 +16,13 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>aliyun-java-sdk-core</artifactId>
-            <version>4.3.9</version>
+            <groupId>com.haili.ins.commons</groupId>
+            <artifactId>ins-common-webmvc</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alicloud-sms</artifactId>
         </dependency>
     </dependencies>
 </project>
