--- a/ins-service/ins-scheduler-service/ins-alibaba-schedulerx/pom.xml
+++ b/ins-service/ins-scheduler-service/ins-alibaba-schedulerx/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.haili.ins.data.file</groupId>
-        <artifactId>ins-file</artifactId>
+        <groupId>com.haili.ins.service.scheduler</groupId>
+        <artifactId>ins-scheduler-service</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.haili.ins.data.file</groupId>
-    <artifactId>ins-aliyun-oss</artifactId>
+    <groupId>com.haili.ins.service.scheduler</groupId>
+    <artifactId>ins-alibaba-schedulerx</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -22,8 +22,9 @@
         </dependency>
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
+            <artifactId>spring-cloud-starter-alicloud-schedulerx</artifactId>
         </dependency>
-    </dependencies>
 
+    </dependencies>
+    
 </project>
