--- a/ins-service/ins-scheduler-service/ins-scheduler/pom.xml
+++ b/ins-service/ins-scheduler-service/ins-scheduler/pom.xml
@@ -5,18 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.haili.ins</groupId>
-        <artifactId>haili-ins</artifactId>
+        <groupId>com.haili.ins.service.scheduler</groupId>
+        <artifactId>ins-scheduler-service</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.haili.ins.invocation.chain</groupId>
-    <artifactId>ins-invocation-chain</artifactId>
+    <groupId>com.haili.ins.service.scheduler</groupId>
+    <artifactId>ins-scheduler</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>ins-invocation-chain-cat</module>
-        <module>ins-invocation-chain-skywalking</module>
 
-    </modules>
+    
 </project>
