--- a/ins-service/ins-member-service/ins-member/member-dao/src/main/resources/jdbc.properties
+++ b/ins-service/ins-member-service/ins-member/member-dao/src/main/resources/jdbc.properties
@@ -1,15 +1,15 @@
-## mapper xml \uFFFD\u013C\uFFFD\uFFFD\uFFFD\u05B7
+## mapper xml \u5B58\u653E\u8DEF\u5F84
 mybatis.mapper-locations=classpath*:mybatis/*Mapper.xml
-##\uFFFD\uFFFD\uFFFD\u077F\uFFFDurl
+##\u6570\u636E\u5E93\u8FDE\u63A5url
 spring.datasource.url=jdbc:mysql://47.100.3.157:3306/member?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
-##\uFFFD\uFFFD\uFFFD\u077F\uFFFD\uFFFD\u00FB\uFFFD\uFFFD\uFFFD
+##\u7528\u6237\u540D
 spring.datasource.username=root
-##\uFFFD\uFFFD\uFFFD\u077F\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
+##\u5BC6\u7801
 spring.datasource.password=123456
-##\uFFFD\uFFFD\uFFFD\u077F\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
+##\u6570\u636E\u5E93\u9A71\u52A8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Mybatis Generator configuration
-#dao\uFFFD\uFFFD\uFFFD\u02B5\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u03BB\uFFFD\uFFFD
+#dao\u5B58\u653E\u76EE\u5F55
 mybatis.project=src/main/java
-#mapper\uFFFD\u013C\uFFFD\uFFFD\uFFFD\u03BB\uFFFD\uFFFD
+#mapper\u5B58\u653E\u76EE\u5F55
 mybatis.resources=src/main/resources
